add: readme for eda

--- a/infer_notebook.ipynb
+++ b/infer_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "southern-forward",
+   "id": "weird-color",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "preceding-taxation",
+   "id": "modified-airline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-posting",
+   "id": "coordinated-robinson",
    "metadata": {},
    "source": [
     "## Load weight"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "secret-processor",
+   "id": "frank-comparative",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "entitled-authentication",
+   "id": "olympic-detection",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-ethics",
+   "id": "alternative-airline",
    "metadata": {},
    "source": [
     "## Dataset"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "optional-visiting",
+   "id": "varied-speech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "supported-division",
+   "id": "hollywood-explorer",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-language",
+   "id": "sealed-medicaid",
    "metadata": {},
    "source": [
     "## Inference"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "greatest-scheduling",
+   "id": "faced-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "metric-springer",
+   "id": "fifty-fitness",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "affecting-festival",
+   "id": "emotional-study",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "sufficient-truth",
+   "id": "recorded-objective",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-wellington",
+   "id": "editorial-nomination",
    "metadata": {},
    "source": [
     "## Confusion matrix"
@@ -272,18 +272,18 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "bronze-funds",
+   "id": "prospective-landing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_CLASSES = 3\n",
-    "classes = ['happy', 'neutral', 'angry']"
+    "NUM_CLASSES = 7\n",
+    "classes = ['happy', 'neutral', 'angry', 'sad', 'fear', 'surprise', 'disgust']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "nutritional-bacteria",
+   "id": "advisory-donor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "italic-elevation",
+   "id": "consecutive-fleet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "illegal-trunk",
+   "id": "injured-graham",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "corrected-sentence",
+   "id": "contemporary-sensitivity",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stopped-desert",
+   "id": "accepted-begin",
    "metadata": {},
    "outputs": [],
    "source": []
