--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "interior-pierre",
+   "id": "stretch-compact",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "buried-reset",
+   "id": "caroline-jenny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confused-breath",
+   "id": "built-specification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-commodity",
+   "id": "functional-wagner",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,39 @@
       "Epoch   1\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 36%|██████████████▉                           | 69/194 [01:59<03:18,  1.59s/it]"
+      "100%|█████████████████████████████████████████| 194/194 [05:22<00:00,  1.66s/it]\n",
+      "+ Training result\n",
+      "Loss: 1.7748402221915647\n",
+      "Accuracy: 0.3078913390636444\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:18<00:00,  1.45s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.8372016164163747\n",
+      "Accuracy: 0.292428195476532\n",
+      "-----------------------------------\n",
+      "Loss is improved from  1.881128 to  1.837202. Saving weights...\n",
+      "Accuracy is improved from  0.242820 to  0.292428. Saving weights...\n",
+      "\n",
+      "Epoch   2\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 194/194 [05:07<00:00,  1.58s/it]\n",
+      "+ Training result\n",
+      "Loss: 1.6211365796241566\n",
+      "Accuracy: 0.4062095880508423\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:22<00:00,  1.48s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.8549338144560656\n",
+      "Accuracy: 0.27154046297073364\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.837202.\n",
+      "Accuracy is not improved from 0.292428.\n",
+      "\n",
+      "Epoch   3\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      " 16%|██████▉                                   | 32/194 [00:47<04:03,  1.50s/it]"
      ]
     }
    ],
@@ -142,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-teaching",
+   "id": "amateur-fitting",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -151,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-reset",
+   "id": "consolidated-cameroon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "norman-catalog",
+   "id": "durable-structure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dried-basin",
+   "id": "identified-relative",
    "metadata": {},
    "outputs": [],
    "source": []
