add: regularization layers

--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stretch-compact",
+   "id": "accessory-administrator",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "caroline-jenny",
+   "id": "mineral-frontier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "built-specification",
+   "id": "absolute-charlotte",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "functional-wagner",
+   "execution_count": 3,
+   "id": "mexican-liability",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,56 @@
       "Epoch   3\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 16%|██████▉                                   | 32/194 [00:47<04:03,  1.50s/it]"
+      "100%|█████████████████████████████████████████| 194/194 [05:04<00:00,  1.57s/it]\n",
+      "+ Training result\n",
+      "Loss: 1.3998904028504169\n",
+      "Accuracy: 0.5019404888153076\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:24<00:00,  1.51s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.9305670807758968\n",
+      "Accuracy: 0.2532637119293213\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.837202.\n",
+      "Accuracy is not improved from 0.292428.\n",
+      "\n",
+      "Epoch   4\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 194/194 [04:57<00:00,  1.54s/it]\n",
+      "+ Training result\n",
+      "Loss: 1.200518793359245\n",
+      "Accuracy: 0.5756791830062866\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:17<00:00,  1.43s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.9530979699144764\n",
+      "Accuracy: 0.2898172438144684\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.837202.\n",
+      "Accuracy is not improved from 0.292428.\n",
+      "\n",
+      "Epoch   5\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "  1%|▍                                          | 2/194 [00:02<04:17,  1.34s/it]^C\n",
+      "  1%|▍                                          | 2/194 [00:04<06:44,  2.10s/it]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"train.py\", line 120, in <module>\n",
+      "    train(config)\n",
+      "  File \"train.py\", line 93, in train\n",
+      "    val_dataloader=val_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 178, in train\n",
+      "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 105, in train_epoch\n",
+      "    self.optimizer.step()\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/lr_scheduler.py\", line 67, in wrapper\n",
+      "    return wrapped(*args, **kwargs)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/autograd/grad_mode.py\", line 26, in decorate_context\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/adam.py\", line 99, in step\n",
+      "    if group['amsgrad']:\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -174,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amateur-fitting",
+   "id": "floating-antenna",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -182,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "consolidated-cameroon",
+   "execution_count": 4,
+   "id": "declared-responsibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,10 +242,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "durable-structure",
+   "execution_count": 5,
+   "id": "developing-station",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 215831), started 1:36:37 ago. (Use '!kill 215831' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-ba2960b86ecf02d7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-ba2960b86ecf02d7\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir=runs/"
    ]
@@ -204,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "identified-relative",
+   "id": "unlikely-detective",
    "metadata": {},
    "outputs": [],
    "source": []
