--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "accessory-administrator",
+   "execution_count": 14,
+   "id": "smooth-subcommittee",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Feb 24 01:23:21 2021       \n",
+      "Wed Feb 24 02:16:10 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   53C    P0    N/A /  N/A |   2068MiB /  4042MiB |     11%      Default |\n",
+      "| N/A   48C    P0    N/A /  N/A |    711MiB /  4042MiB |      8%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -29,11 +29,10 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1330      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                205MiB |\n",
-      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              158MiB |\n",
-      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      198MiB |\n",
-      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files      129MiB |\n",
-      "|    0   N/A  N/A    226236      C   ...e/kvu/erc/venv/bin/python     1285MiB |\n",
+      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                188MiB |\n",
+      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              195MiB |\n",
+      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      142MiB |\n",
+      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files       95MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -44,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "mineral-frontier",
+   "execution_count": 15,
+   "id": "another-cigarette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "absolute-charlotte",
+   "execution_count": 16,
+   "id": "bearing-midnight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "mexican-liability",
+   "execution_count": 17,
+   "id": "desirable-invention",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +82,7 @@
       "                                    'n_mels': 128,\n",
       "                                    'sr': 22050},\n",
       "                          'loader': { 'args': { 'batch_size': 4,\n",
-      "                                                'drop_last': False,\n",
+      "                                                'drop_last': True,\n",
       "                                                'shuffle': True},\n",
       "                                      'name': 'DataLoader'},\n",
       "                          'name': 'AudioDataset'},\n",
@@ -116,88 +115,85 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 194/194 [05:27<00:00,  1.69s/it]\n",
+      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.68s/it]\n",
       "+ Training result\n",
-      "Loss: 1.9069749000146208\n",
-      "Accuracy: 0.2121604084968567\n",
+      "Loss: 1.9793741647443621\n",
+      "Accuracy: 0.1606217622756958\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:20<00:00,  1.46s/it]\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:30<00:00,  1.57s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.8811281844973562\n",
+      "Loss: 1.8899383259316287\n",
       "Accuracy: 0.24281984567642212\n",
       "-----------------------------------\n",
-      "Loss is improved from  inf to  1.881128. Saving weights...\n",
+      "Loss is improved from  inf to  1.889938. Saving weights...\n",
       "Accuracy is improved from  0.000000 to  0.242820. Saving weights...\n",
       "\n",
       "Epoch   1\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 194/194 [05:22<00:00,  1.66s/it]\n",
+      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.68s/it]\n",
       "+ Training result\n",
-      "Loss: 1.7748402221915647\n",
-      "Accuracy: 0.3078913390636444\n",
+      "Loss: 1.8362002595101001\n",
+      "Accuracy: 0.2694300413131714\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:18<00:00,  1.45s/it]\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.8372016164163747\n",
-      "Accuracy: 0.292428195476532\n",
+      "Loss: 1.866108357906342\n",
+      "Accuracy: 0.2898172438144684\n",
       "-----------------------------------\n",
-      "Loss is improved from  1.881128 to  1.837202. Saving weights...\n",
-      "Accuracy is improved from  0.242820 to  0.292428. Saving weights...\n",
+      "Loss is improved from  1.889938 to  1.866108. Saving weights...\n",
+      "Accuracy is improved from  0.242820 to  0.289817. Saving weights...\n",
       "\n",
       "Epoch   2\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 194/194 [05:07<00:00,  1.58s/it]\n",
+      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.67s/it]\n",
       "+ Training result\n",
-      "Loss: 1.6211365796241566\n",
-      "Accuracy: 0.4062095880508423\n",
+      "Loss: 1.752367460665925\n",
+      "Accuracy: 0.3147668242454529\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:22<00:00,  1.48s/it]\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.8549338144560656\n",
-      "Accuracy: 0.27154046297073364\n",
+      "Loss: 1.8425808474421501\n",
+      "Accuracy: 0.26892951130867004\n",
       "-----------------------------------\n",
-      "Loss is not improved from 1.837202.\n",
-      "Accuracy is not improved from 0.292428.\n",
+      "Loss is improved from  1.866108 to  1.842581. Saving weights...\n",
+      "Accuracy is not improved from 0.289817.\n",
       "\n",
       "Epoch   3\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 194/194 [05:04<00:00,  1.57s/it]\n",
+      "100%|█████████████████████████████████████████| 193/193 [05:26<00:00,  1.69s/it]\n",
       "+ Training result\n",
-      "Loss: 1.3998904028504169\n",
-      "Accuracy: 0.5019404888153076\n",
+      "Loss: 1.677268546479971\n",
+      "Accuracy: 0.3691709637641907\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:24<00:00,  1.51s/it]\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.9305670807758968\n",
-      "Accuracy: 0.2532637119293213\n",
+      "Loss: 1.8611799329519276\n",
+      "Accuracy: 0.24281984567642212\n",
       "-----------------------------------\n",
-      "Loss is not improved from 1.837202.\n",
-      "Accuracy is not improved from 0.292428.\n",
+      "Loss is not improved from 1.842581.\n",
+      "Accuracy is not improved from 0.289817.\n",
       "\n",
       "Epoch   4\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 194/194 [04:57<00:00,  1.54s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.200518793359245\n",
-      "Accuracy: 0.5756791830062866\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:17<00:00,  1.43s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.9530979699144764\n",
-      "Accuracy: 0.2898172438144684\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.837202.\n",
-      "Accuracy is not improved from 0.292428.\n",
+      " 59%|████████████████████████▏                | 114/193 [03:10<02:11,  1.66s/it]^C\n",
+      " 59%|████████████████████████▏                | 114/193 [03:11<02:13,  1.68s/it]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 146, in load\n",
+      "    with sf.SoundFile(path) as sf_desc:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 629, in __init__\n",
+      "    self._file = self._open(file, mode_int, closefd)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1184, in _open\n",
+      "    \"Error opening {0!r}: \".format(self.name))\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1357, in _error_check\n",
+      "    raise RuntimeError(prefix + _ffi.string(err_str).decode('utf-8', 'replace'))\n",
+      "RuntimeError: Error opening 'data/AFEW/raw-audios/train/010404607.mp3': File contains data in an unknown format.\n",
       "\n",
-      "Epoch   5\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "  1%|▍                                          | 2/194 [00:02<04:17,  1.34s/it]^C\n",
-      "  1%|▍                                          | 2/194 [00:04<06:44,  2.10s/it]\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
       "Traceback (most recent call last):\n",
       "  File \"train.py\", line 120, in <module>\n",
       "    train(config)\n",
@@ -205,14 +201,28 @@
       "    val_dataloader=val_dataloader)\n",
       "  File \"./libs/workers/trainer.py\", line 178, in train\n",
       "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
-      "  File \"./libs/workers/trainer.py\", line 105, in train_epoch\n",
-      "    self.optimizer.step()\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/lr_scheduler.py\", line 67, in wrapper\n",
-      "    return wrapped(*args, **kwargs)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/autograd/grad_mode.py\", line 26, in decorate_context\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/adam.py\", line 99, in step\n",
-      "    if group['amsgrad']:\n",
+      "  File \"./libs/workers/trainer.py\", line 87, in train_epoch\n",
+      "    for i, (inp, lbl) in enumerate(progress_bar):\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/tqdm/std.py\", line 1170, in __iter__\n",
+      "    for obj in iterable:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 435, in __next__\n",
+      "    data = self._next_data()\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 475, in _next_data\n",
+      "    data = self._dataset_fetcher.fetch(index)  # may raise StopIteration\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in fetch\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in <listcomp>\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "  File \"./libs/datasets/audio.py\", line 66, in __getitem__\n",
+      "    y = self.get_audio(audio_path_w_format)\n",
+      "  File \"./libs/datasets/audio.py\", line 25, in get_audio\n",
+      "    y, _ = lb.load(audio_path, sr=self.sr, duration=self.duration, offset=offset)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 163, in load\n",
+      "    y, sr_native = __audioread_load(path, offset, duration, dtype)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 201, in __audioread_load\n",
+      "    frame = util.buf_to_float(frame, dtype=dtype)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/util/utils.py\", line 1341, in buf_to_float\n",
+      "    return scale * np.frombuffer(x, fmt).astype(dtype)\n",
       "KeyboardInterrupt\n"
      ]
     }
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floating-antenna",
+   "id": "superior-patch",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -231,10 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "declared-responsibility",
+   "execution_count": 18,
+   "id": "sharp-drinking",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext tensorboard\n",
     "%reload_ext tensorboard"
@@ -242,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "developing-station",
+   "execution_count": 19,
+   "id": "sustainable-invention",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 215831), started 1:36:37 ago. (Use '!kill 215831' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 215831), started 2:26:37 ago. (Use '!kill 215831' to kill it.)"
       ]
      },
      "metadata": {},
@@ -259,11 +278,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-ba2960b86ecf02d7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-97e89e674bdf700\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-ba2960b86ecf02d7\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-97e89e674bdf700\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -289,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlikely-detective",
+   "id": "transparent-uncertainty",
    "metadata": {},
    "outputs": [],
    "source": []
