add: accuracy score

--- a/infer_notebook.ipynb
+++ b/infer_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "short-heading",
+   "id": "recorded-clark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "driven-shipping",
+   "execution_count": 15,
+   "id": "protecting-desert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "from PIL import Image\n",
     "from torchvision import transforms as tvtf\n",
     "from torch.utils.data import DataLoader\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lightweight-liberty",
+   "id": "english-medicaid",
    "metadata": {},
    "source": [
     "## Load weight"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "rubber-charge",
+   "id": "neural-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "still-girlfriend",
+   "id": "foster-niger",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educated-denver",
+   "id": "perceived-bermuda",
    "metadata": {},
    "source": [
     "## Dataset"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "attractive-stuart",
+   "id": "electrical-silver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "approximate-football",
+   "id": "creative-venture",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-certificate",
+   "id": "palestinian-hours",
    "metadata": {},
    "source": [
     "## Inference"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "blank-update",
+   "id": "behind-drilling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "little-might",
+   "id": "seven-sheet",
    "metadata": {},
    "outputs": [
     {
@@ -231,18 +231,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "unavailable-cinema",
+   "execution_count": 16,
+   "id": "dense-efficiency",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2898172323759791\n"
+     ]
+    }
+   ],
    "source": [
-    "preds = np.argmax(test_preds, axis=1)"
+    "preds = np.argmax(test_preds, axis=1)\n",
+    "print(accuracy_score(preds, ground_truths))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "instant-thesaurus",
+   "id": "collaborative-example",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-translation",
+   "id": "visible-institute",
    "metadata": {},
    "source": [
     "## Confusion matrix"
@@ -260,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "clinical-greeting",
+   "id": "alpha-sharing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "english-specific",
+   "id": "egyptian-collectible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "mineral-mason",
+   "id": "married-ridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "liked-reality",
+   "id": "enclosed-poetry",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "formal-abraham",
+   "id": "hindu-beaver",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -328,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "settled-apple",
+   "id": "armed-springer",
    "metadata": {},
    "outputs": [],
    "source": []
