--- a/scripts/OLD/testing.ipynb
+++ b/scripts/OLD/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "id": "appropriate-generic",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "electric-battle",
+   "execution_count": 59,
+   "id": "ignored-payroll",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "careful-electricity",
+   "execution_count": 60,
+   "id": "blind-webcam",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        ")"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "ambient-graphics",
+   "execution_count": 62,
+   "id": "behind-assist",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "          216,     2])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,24 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "extra-baghdad",
+   "execution_count": 63,
+   "id": "unauthorized-paragraph",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([    0, 31414,   232,   328,     2,     2,  9226,    16,   255,  4791,\n",
-       "            2,     2, 39131, 29867,    35, 30103,   205,     7,   216,     2])"
+       "tensor([    0,  4014, 11328, 20920,   232,   328,     2,     2,    42,    16,\n",
+       "          255,  4791,     2,     2, 39131, 29867,    35, 30103,   205,     7,\n",
+       "          216,     2])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sequence = ['Hello world!', 'this is Tae', 'JOEY: alright good to know']\n",
+    "sequence = ['START Hello world!', ' this is Tae', 'JOEY: alright good to know']\n",
     "tokens = roberta.encode(*sequence)\n",
     "# assert tokens.tolist() == [0, 31414, 232, 328, 2]\n",
     "# roberta.decode(tokens)  # 'Hello world!'\n",
@@ -314,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "distinct-asthma",
+   "id": "adjusted-auditor",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cooked-combat",
+   "id": "metallic-norfolk",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "shaped-ideal",
+   "id": "christian-relation",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "certified-guitar",
+   "id": "waiting-helmet",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cardiac-locator",
+   "id": "adjustable-fields",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "talented-local",
+   "id": "japanese-soundtrack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "absolute-isaac",
+   "id": "great-marine",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "desperate-photograph",
+   "id": "private-china",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "centered-canadian",
+   "id": "broad-korea",
    "metadata": {},
    "outputs": [],
    "source": [
