edit: slight changes

--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "smooth-subcommittee",
+   "execution_count": 1,
+   "id": "fatal-match",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Feb 24 02:16:10 2021       \n",
+      "Sun Mar  7 21:25:10 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   48C    P0    N/A /  N/A |    711MiB /  4042MiB |      8%      Default |\n",
+      "| N/A   49C    P0    N/A /  N/A |    816MiB /  4042MiB |      2%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -28,11 +28,11 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      1330      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                188MiB |\n",
-      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              195MiB |\n",
-      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      142MiB |\n",
-      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files       95MiB |\n",
+      "|    0   N/A  N/A      1335      G   /usr/lib/xorg/Xorg                 80MiB |\n",
+      "|    0   N/A  N/A      3288      G   /usr/lib/xorg/Xorg                199MiB |\n",
+      "|    0   N/A  N/A      3659      G   /usr/bin/gnome-shell              190MiB |\n",
+      "|    0   N/A  N/A      6388      G   ...AAAAAAAAA= --shared-files      190MiB |\n",
+      "|    0   N/A  N/A      7448      G   ...AAAAAAAA== --shared-files      146MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "another-cigarette",
+   "id": "incomplete-guidance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bearing-midnight",
+   "execution_count": 2,
+   "id": "bound-weather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,34 +66,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "desirable-invention",
+   "execution_count": 3,
+   "id": "pregnant-oliver",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ 'dataset': { 'train': { 'args': { 'csv_path': 'data/AFEW/raw-audios/train.csv',\n",
-      "                                    'data_dir': 'data/AFEW/raw-audios/train/',\n",
-      "                                    'duration': 3,\n",
+      "{ 'dataset': { 'train': { 'args': { 'csv_path': 'data/MELD/raw-audios/train.csv',\n",
+      "                                    'data_dir': 'data/MELD/raw-audios/train/',\n",
+      "                                    'duration': 8,\n",
       "                                    'format': '.mp3',\n",
       "                                    'is_train': True,\n",
       "                                    'n_mels': 128,\n",
       "                                    'sr': 22050},\n",
-      "                          'loader': { 'args': { 'batch_size': 4,\n",
+      "                          'loader': { 'args': { 'batch_size': 2,\n",
       "                                                'drop_last': True,\n",
       "                                                'shuffle': True},\n",
       "                                      'name': 'DataLoader'},\n",
       "                          'name': 'AudioDataset'},\n",
-      "               'val': { 'args': { 'csv_path': 'data/AFEW/raw-audios/val.csv',\n",
-      "                                  'data_dir': 'data/AFEW/raw-audios/val/',\n",
-      "                                  'duration': 3,\n",
+      "               'val': { 'args': { 'csv_path': 'data/MELD/raw-audios/val.csv',\n",
+      "                                  'data_dir': 'data/MELD/raw-audios/val/',\n",
+      "                                  'duration': 8,\n",
       "                                  'format': '.mp3',\n",
       "                                  'is_train': False,\n",
       "                                  'n_mels': 128,\n",
       "                                  'sr': 22050},\n",
-      "                        'loader': { 'args': {'batch_size': 4, 'shuffle': True},\n",
+      "                        'loader': { 'args': {'batch_size': 2, 'shuffle': True},\n",
       "                                    'name': 'DataLoader'},\n",
       "                        'name': 'AudioDataset'}},\n",
       "  'debug': False,\n",
@@ -115,72 +115,8 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.68s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.9793741647443621\n",
-      "Accuracy: 0.1606217622756958\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:30<00:00,  1.57s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.8899383259316287\n",
-      "Accuracy: 0.24281984567642212\n",
-      "-----------------------------------\n",
-      "Loss is improved from  inf to  1.889938. Saving weights...\n",
-      "Accuracy is improved from  0.000000 to  0.242820. Saving weights...\n",
-      "\n",
-      "Epoch   1\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.68s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.8362002595101001\n",
-      "Accuracy: 0.2694300413131714\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.866108357906342\n",
-      "Accuracy: 0.2898172438144684\n",
-      "-----------------------------------\n",
-      "Loss is improved from  1.889938 to  1.866108. Saving weights...\n",
-      "Accuracy is improved from  0.242820 to  0.289817. Saving weights...\n",
-      "\n",
-      "Epoch   2\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 193/193 [05:23<00:00,  1.67s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.752367460665925\n",
-      "Accuracy: 0.3147668242454529\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.8425808474421501\n",
-      "Accuracy: 0.26892951130867004\n",
-      "-----------------------------------\n",
-      "Loss is improved from  1.866108 to  1.842581. Saving weights...\n",
-      "Accuracy is not improved from 0.289817.\n",
-      "\n",
-      "Epoch   3\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 193/193 [05:26<00:00,  1.69s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.677268546479971\n",
-      "Accuracy: 0.3691709637641907\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 96/96 [02:29<00:00,  1.56s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.8611799329519276\n",
-      "Accuracy: 0.24281984567642212\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.842581.\n",
-      "Accuracy is not improved from 0.289817.\n",
-      "\n",
-      "Epoch   4\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      " 59%|████████████████████████▏                | 114/193 [03:10<02:11,  1.66s/it]^C\n",
-      " 59%|████████████████████████▏                | 114/193 [03:11<02:13,  1.68s/it]\n",
+      "  1%|▍                                      | 50/4994 [00:45<1:07:13,  1.23it/s]^C\n",
+      "  1%|▍                                      | 50/4994 [00:46<1:16:35,  1.08it/s]\n",
       "Traceback (most recent call last):\n",
       "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 146, in load\n",
       "    with sf.SoundFile(path) as sf_desc:\n",
@@ -190,7 +126,7 @@
       "    \"Error opening {0!r}: \".format(self.name))\n",
       "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1357, in _error_check\n",
       "    raise RuntimeError(prefix + _ffi.string(err_str).decode('utf-8', 'replace'))\n",
-      "RuntimeError: Error opening 'data/AFEW/raw-audios/train/010404607.mp3': File contains data in an unknown format.\n",
+      "RuntimeError: Error opening 'data/MELD/raw-audios/train/dia623_utt14.mp3': File contains data in an unknown format.\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -219,21 +155,29 @@
       "    y, _ = lb.load(audio_path, sr=self.sr, duration=self.duration, offset=offset)\n",
       "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 163, in load\n",
       "    y, sr_native = __audioread_load(path, offset, duration, dtype)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 201, in __audioread_load\n",
-      "    frame = util.buf_to_float(frame, dtype=dtype)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/util/utils.py\", line 1341, in buf_to_float\n",
-      "    return scale * np.frombuffer(x, fmt).astype(dtype)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 187, in __audioread_load\n",
+      "    with audioread.audio_open(path) as input_file:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 107, in audio_open\n",
+      "    backends = available_backends()\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 86, in available_backends\n",
+      "    if ffdec.available():\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/ffdec.py\", line 115, in available\n",
+      "    proc.wait()\n",
+      "  File \"/usr/lib/python3.6/subprocess.py\", line 1477, in wait\n",
+      "    (pid, sts) = self._try_wait(0)\n",
+      "  File \"/usr/lib/python3.6/subprocess.py\", line 1424, in _try_wait\n",
+      "    (pid, sts) = os.waitpid(self.pid, wait_flags)\n",
       "KeyboardInterrupt\n"
      ]
     }
    ],
    "source": [
-    "!python3 train.py --config configs/audio_effnet.yaml --gpus 0 "
+    "!python3 train.py --config configs/MELD_audio_effnet.yaml --gpus 0 "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "superior-patch",
+   "id": "continued-superior",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -242,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "sharp-drinking",
+   "id": "molecular-station",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "sustainable-invention",
+   "id": "cleared-record",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transparent-uncertainty",
+   "id": "utility-industry",
    "metadata": {},
    "outputs": [],
    "source": []
